tests/fixtures/invalid/pow_none_float_bool.py
# Cannot call pow() with None, Float, Bool
x = pow(None, 1.0, True)
